--- a/order-dev.yml
+++ b/order-dev.yml
@@ -8,7 +8,12 @@ spring:
     url: jdbc:mysql://127.0.0.1/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
-
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    
 server:
   port: 9001
 
@@ -19,7 +24,7 @@ logging:
 
 env:
   dev
-  
+
 gril:
   name: lili
   age: 18
